fix z-index

--- a/styles.css
+++ b/styles.css
@@ -294,6 +294,7 @@ body {
   -webkit-user-select: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   display: none;
+  z-index: 200;
 }
 
 .bar {
